# 01_customer_churn_prediction

./: 01_customer_churn_prediction.ipynb  README.MD  pyproject.toml  test_catboost.ipynb
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
