[tool.poetry]
name = "01-customer-churn-prediction"
version = "0.1.0"
description = ""
authors = ["raulett <raulett@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
xgboost = "^2.1.4"
scikit-learn = "^1.6.1"
catboost = "^1.2.7"
lightgbm = "^4.6.0"
notebook = "^7.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
